pretty much everything works im too tired to sum it all up

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +39,7 @@
         android:id="@+id/textView_profilePage_postCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_profilePicture"
@@ -51,6 +53,7 @@
         android:id="@+id/textView_profilePage_followerCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/textView_profilePage_followingCount"
@@ -63,6 +66,7 @@
         android:id="@+id/textView_profilePage_followingCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="Posts"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/textView_profilePage_postCount"
@@ -88,6 +94,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="Followers"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/textView_profilePage_followerCount"
@@ -100,6 +108,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="Following"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/textView_profilePage_followingCount"
@@ -112,6 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:textAlignment="viewStart"
         android:textColor="@color/darkGreen"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/imageView_profilePage_profilePicture"
@@ -128,6 +139,7 @@
         android:drawableTint="@color/green"
         android:foregroundTint="@color/green"
         android:text="Follow"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textColorLink="@color/green"
         android:textSize="18sp"
