--- a/app/src/main/res/layout/activity_make_post.xml
+++ b/app/src/main/res/layout/activity_make_post.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/creme"
-    tools:context=".MakePostActivity">
+    tools:context=".activities.MakePostActivity">
 
     <ImageView
         android:id="@+id/imageView_makePost_content"
