--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -150,8 +150,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_one"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_two"
         app:layout_constraintHorizontal_bias="0.5"
@@ -162,8 +162,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_two"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_one"
         app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_three"
         app:layout_constraintHorizontal_bias="0.5"
@@ -173,8 +173,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_three"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -184,8 +184,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_four"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_five"
         app:layout_constraintHorizontal_bias="0.5"
@@ -196,8 +196,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_five"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_four"
         app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_six"
         app:layout_constraintHorizontal_bias="0.5"
@@ -207,8 +207,8 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_six"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_five"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -218,39 +218,32 @@
 
     <ImageView
         android:id="@+id/imageView_profilePage_seven"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         app:layout_constraintBottom_toTopOf="@+id/imageButton_profilePage_home"
-        app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_eight"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_profilePage_four"
+        app:layout_constraintStart_toStartOf="@+id/imageView_profilePage_four"
         app:layout_constraintTop_toBottomOf="@+id/imageView_profilePage_four"
-        app:layout_constraintVertical_bias="1.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView_profilePage_eight"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_seven"
-        app:layout_constraintEnd_toStartOf="@+id/imageView_profilePage_nine"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView_profilePage_seven"
-        app:layout_constraintTop_toTopOf="@+id/imageView_profilePage_seven"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_profilePage_add"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_profilePage_five"
+        app:layout_constraintStart_toStartOf="@+id/imageView_profilePage_five"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_profilePage_five"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView_profilePage_nine"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_eight"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView_profilePage_eight"
-        app:layout_constraintTop_toTopOf="@+id/imageView_profilePage_eight"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_profilePage_profile"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_profilePage_six"
+        app:layout_constraintStart_toStartOf="@+id/imageView_profilePage_six"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_profilePage_six"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
