Fixed some small typos

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -111,10 +111,10 @@
         android:drawableTint="@color/green"
         android:foregroundTint="@color/green"
         android:text="Follow"
-        android:textAlinment="center"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="18sp"
-        android:textcolorLink="@color/green"
+        android:textColorLink="@color/green"
         app:cornerRadius="10sp"
         app:iconTint="@color/green"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -130,10 +130,10 @@
         android:drawableTint="@color/green"
         android:foregroundTint="@color/green"
         android:text="Unfollow"
-        android:textAlinment="center"
+        android:textAlignment="center"
         android:textColor="@color/darkGreen"
         android:textSize="18sp"
-        android:textcolorLink="@color/green"
+        android:textColorLink="@color/green"
         app:cornerRadius="10sp"
         app:iconTint="@color/green"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
