--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -11,20 +11,21 @@
 
     <ImageView
         android:id="@+id/imageView_post_content"
-        android:layout_width="256dp"
-        android:layout_height="256dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView_post_filledHeart"
+        android:layout_width="380dp"
+        android:layout_height="380dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_post_logo"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView_post_back"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_post_logo"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
@@ -33,35 +34,33 @@
         android:id="@+id/imageView_post_filledHeart"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_post_hollowHeart"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_post_hollowHeart"
+        app:layout_constraintTop_toTopOf="@+id/imageView_post_hollowHeart"
         app:srcCompat="@drawable/heart_filled" />
 
     <ImageView
         android:id="@+id/imageView_post_hollowHeart"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/button_post_follow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_post_unfollow"
         app:srcCompat="@drawable/heart_hollow" />
 
     <TextView
         android:id="@+id/textView_post_title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Title"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/button_post_follow" />
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView_post_username"
+        app:layout_constraintTop_toBottomOf="@+id/textView_post_username" />
 
     <TextView
         android:id="@+id/textView_post_likeCount"
-        android:layout_width="0dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:text="0"
         android:textAlignment="center"
@@ -71,42 +70,40 @@
 
     <TextView
         android:id="@+id/textView_post_description"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="Description"
-        app:layout_constraintEnd_toEndOf="@+id/textView_post_title"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/textView_post_title"
         app:layout_constraintTop_toBottomOf="@+id/textView_post_title" />
 
     <TextView
         android:id="@+id/textView_post_username"
-        android:layout_width="0dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Username"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/button_post_follow"
-        app:layout_constraintEnd_toStartOf="@+id/button_post_follow"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        android:textAlignment="viewStart"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="@+id/imageView_post_content"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_post_content" />
 
     <ImageView
         android:id="@+id/imageView_post_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_post_back"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView_post_back"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView_post_back"
         app:srcCompat="@drawable/title" />
 
     <Button
         android:id="@+id/button_post_follow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="24dp"
         android:backgroundTint="@color/green"
         android:backgroundTintMode="add"
         android:drawableTint="@color/green"
@@ -118,15 +115,14 @@
         android:textSize="18sp"
         app:cornerRadius="10sp"
         app:iconTint="@color/green"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toTopOf="@+id/textView_post_title"
+        app:layout_constraintStart_toEndOf="@+id/textView_post_username"
+        app:layout_constraintTop_toTopOf="@+id/textView_post_username" />
 
     <Button
         android:id="@+id/button_post_unfollow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/green"
         android:backgroundTintMode="add"
         android:drawableTint="@color/green"
@@ -138,34 +134,9 @@
         android:textSize="18sp"
         app:cornerRadius="10sp"
         app:iconTint="@color/green"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toBottomOf="@+id/button_post_follow"
+        app:layout_constraintLeft_toLeftOf="@id/button_post_follow"
+        app:layout_constraintRight_toRightOf="@id/button_post_follow"
+        app:layout_constraintStart_toStartOf="@+id/button_post_follow" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="237dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="238dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="48dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="105dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
