--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -101,8 +101,8 @@
 
     <Button
         android:id="@+id/button_post_follow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:backgroundTint="@color/green"
         android:backgroundTintMode="add"
@@ -121,8 +121,8 @@
 
     <Button
         android:id="@+id/button_post_unfollow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:backgroundTint="@color/green"
         android:backgroundTintMode="add"
         android:drawableTint="@color/green"
